# LLM_spam

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: test.yml
alloy/: config.alloy
grafana/dashboards/: app_dashboard.json
loki/: loki-config.yml
prometheus/: prometheus.yml
src/app/: main.py
src/app/authentication/: auth.py
src/app/config/: settings.py
src/app/db/: database.py  db_models.py
src/app/evaluation/: evaluate_model.py
src/app/evaluation/golden_data_set/: golden_data.py
src/app/exceptions/: exceptions.py
src/app/llm_clients/: gemini.py
src/app/logging/: logg.py
src/app/prompts/: prompt_v1.py
src/app/retry_utils/: retry.py
src/app/routers/: v1.py
src/app/schemas/: pydantic_schemas.py
src/app/services/: spam_classification.py
src/llm_spam/: main.py
src/llm_spam/services/: spam_classification.py
tests/: conftest.py  test_api_classify.py  test_api_create_token.py  test_api_create_user.py  test_api_me.py  test_api_post_classify.py  test_api_predictions.py  test_classify_spam_function.py  test_eval_model.py
