[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-spam"
version = "0.1.0"
description = "LLM spam classifier"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
